--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -10,5 +10,5 @@
        runs-on: ubuntu-latest
 
        steps:
-       - name: Print Hello World
+       - name: Print Hello World!
          run: echo "Hello World!"
